report(viewer): minify inlined report-generator bundle (#9596)

--- a/package.json
+++ b/package.json
@@ -95,12 +95,12 @@
     "@types/update-notifier": "^1.0.2",
     "@types/ws": "^4.0.1",
     "@types/yargs": "^8.0.2",
+    "@wardpeet/brfs": "2.1.0-0",
     "angular": "^1.7.4",
     "archiver": "^3.0.0",
     "babel-core": "^6.26.0",
     "babel-plugin-syntax-async-generators": "^6.13.0",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
-    "brfs": "^2.0.2",
     "browserify": "^16.2.3",
     "bundlesize": "^0.17.2",
     "chalk": "^2.4.1",
